# dify-ee-helm-chart-values-generator

./: .editorconfig  .flake8  .gitignore  .pylintrc  .yamllint.yml  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  config.py  generate-values-prd.py  generator.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_features.py  test_format_preservation.py  test_no_ruamel.py  test_s3_config.py  test_s3_config_detailed.py  test_services.py  values.yaml  version_manager.py
.github/workflows/: ci.yml  pr-review.yml
docs/: CHANGELOG.md  CODE-STRUCTURE.md  CONFIG.md  FLOWCHART.md  HELM-DOWNLOAD-MECHANISM.md  I18N-COMPLETE.md  I18N-UPDATE-PROGRESS.md  MODULES.md  PR-REVIEW.md  README-GENERATOR.md  VALUES-DOWNLOAD.md  VERSION-MANAGEMENT.md  WORKFLOW.md
i18n/: __init__.py  language.py  translations.py
modules/: __init__.py  global_config.py  infrastructure.py  mail.py  networking.py  plugins.py  services.py
modules/features/: __init__.py  base.py  external_prometheus.py  plugin_metric.py  trigger_worker.py
utils/: __init__.py  colors.py  downloader.py  prompts.py
